# circom-zed-lsp

./: extention.toml
server/: .gitignore  Cargo.toml
server/circom-lsp/: Cargo.toml
server/lsp/: Cargo.toml
server/lsp/src/: ast.rs  backend.rs  main.rs  wrapper.rs
server/parser/src/: lib.rs  syntax_sugar_remover.rs
